--- a/Client_QT.ui
+++ b/Client_QT.ui
@@ -14,7 +14,7 @@
    <string>PYQT_Client</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="pushButton1">
     <property name="geometry">
      <rect>
       <x>420</x>
@@ -27,7 +27,7 @@
      <string>Отправить</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit">
+   <widget class="QLineEdit" name="lineEdit_1">
     <property name="geometry">
      <rect>
       <x>20</x>
